--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+
+<div class="col-10 offset-1">
+    <router-outlet></router-outlet>
+</div>
+
 <app-footer></app-footer>
