--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,9 @@
 .footer{
     background-color: #3f51b5 !important;
-    position: absolute;
     bottom: 0;
     width: 100%;
     padding: 20px;
+    position: fixed
 }
 .text-color-white{
     color: white
