--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,26 +1,45 @@
 <div class="col-12 footer">
-    <div class="container">
+    <div class="">
         <div class="row">
             
-            <div class="col-6 text-color-white">
-                <p>
-                    This is a sample frontend for the managment of a Band through calls an API on Node + Express server 
-                </p>
+            <div class="col-4 offset-1 text-color-white">
+                <span>
+                    This is a sample frontend through API calls
+                </span>
             </div>
 
-            <div class="col-6 text-color-white text-right">
+            <div class="col-2 text-color-white text-center">
                 <div class="row">
-                    <div class="col-10">
-                        <p>
-                            Code available on <a class="link-footer" href="https://github.com/Asega1996/BandFront">Github</a>
-                        </p>
-                    </div>
-                    <div class="col-2">
-                        <a href="https://github.com/Asega1996/BandFront">
+                    <div class="col-12">
+                        <span>
                             <span>
-                                <img  alt="github" src="../../assets/svg/github-circle-white-transparent.svg">
+                                <img width="20px" alt="github" src="../../assets/svg/angular-icon.svg">
                             </span>
-                        </a>
+                            &nbsp;
+                            <span>
+                                <img width="20px" alt="github" src="../../assets/svg/nodejs-icon.svg">
+                            </span>
+                            &nbsp;
+                            <span>
+                                <img width="50" alt="github" src="../../assets/svg/mongodb.svg">
+                            </span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-3 text-color-white text-right">
+                <div class="row">
+                    <div class="col-12">
+                        <span>
+                            Code available on <a class="link-footer" href="https://github.com/Asega1996/BandFront">Github</a> 
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            <a href="https://github.com/Asega1996/BandFront">
+                                <span>
+                                    <img width="20px" alt="github" src="../../assets/svg/github-circle-white-transparent.svg">
+                                </span>
+                            </a>
+                        </span>
                     </div>
                 </div>
             </div>
