--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -7,6 +7,8 @@
     background-color: #3f51b5 !important;
     color: white !important;
     font-weight: bold;
+    width: 100%;
+    
 }
 li.menu-item {
     margin: 15px;
@@ -19,4 +21,11 @@ a {
 a:hover{
     color: #b5a23f;
     text-decoration: none
+}
+.menu-btn{
+    vertical-align: middle;
+    margin-top: 10px;
+    background: transparent;
+    border: white 1px solid;
+    border-radius: 5px;
 }
