--- a/src/app/musician/musician.component.html
+++ b/src/app/musician/musician.component.html
@@ -1,1 +1,30 @@
-<p>musician works!</p>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-100">
+  
+    <!-- Position Column -->
+    <ng-container matColumnDef="firstName">
+      <th mat-header-cell *matHeaderCellDef> {{ 'first name' | titlecase }} </th>
+      <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef> {{ 'last name' | titlecase }} </th>
+      <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+    </ng-container>
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="instrument">
+      <th mat-header-cell *matHeaderCellDef> {{ 'instrument' | titlecase }} </th>
+      <td mat-cell *matCellDef="let element"> {{element.instrument | instrumentStyle}} </td>
+    </ng-container>
+  
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="phone">
+      <th mat-header-cell *matHeaderCellDef> {{ 'phone' | titlecase }} </th>
+      <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
