--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,1 +1,103 @@
-<p>calendar works!</p>
+<div class="ar-34">
+        <iframe src="https://calendar.google.com/calendar/b/1/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FMadrid&amp;src=YWx1bS51Y2EuZXNfOGFlNmJ0ZDRnaWphOGZlNzBzcWM4YTk4NjRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23B39DDB&amp;mode=WEEK&amp;showPrint=0&amp;showTitle=0&amp;showCalendars=0" style="border-width:0" width="100%" height="650" frameborder="0" scrolling="no"></iframe>
+</div>
+
+
+<div class="mat-elevation-z8 mb-5 mt-100px">
+        <table mat-table [dataSource]="dataSource" class="w-100">
+        
+          <!-- Position Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> {{ 'event name' | titlecase }} </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+        
+          <!-- Name Column -->
+          <ng-container matColumnDef="dateStart">
+            <th mat-header-cell *matHeaderCellDef> {{ 'start at' | titlecase }} </th>
+            <td mat-cell *matCellDef="let element"> {{element.dateStart}} </td>
+          </ng-container>
+        
+          <!-- Weight Column -->
+          <ng-container matColumnDef="dateEnd">
+            <th mat-header-cell *matHeaderCellDef> {{ 'end at' | titlecase }} </th>
+            <td mat-cell *matCellDef="let element"> {{element.dateEnd}} </td>
+          </ng-container>
+      
+      
+          <ng-container matColumnDef="options">
+            <th class="text-center" mat-header-cell *matHeaderCellDef> {{'options'| titlecase}} </th>
+            <td class="text-center" mat-cell *matCellDef="let element"> 
+              <button (click)="patchValue(element)" class="btn btn-primary">Edit</button>
+              <button (click)="deleteConcert(element)" class="ml-2 btn btn-danger">Delete</button>
+            </td>
+          </ng-container>
+        
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </div>
+      
+      <mat-card class="mb-100px">
+        <div>
+          <div class="row">
+            <form class="row  w-100" [formGroup]="concertForm" (ngSubmit)="onSubmit()">
+      
+              <mat-form-field class="d-none">
+                <input matInput class="invisible" formControlName="_id">
+              </mat-form-field>
+      
+              <div class="col-4 pl-4">
+                <mat-form-field>
+                    <input matInput placeholder="Event name" formControlName="name" required>
+                </mat-form-field>
+              </div>
+
+
+              <div class="col-4">
+                    <div class="col-6">
+                        <mat-form-field>
+
+                                <input formControlName="dateStart" matInput [matDatepicker]="pickerStart" placeholder="Choose start date" required>
+                                <mat-datepicker-toggle matSuffix [for]="pickerStart"></mat-datepicker-toggle>
+                                <mat-datepicker #pickerStart></mat-datepicker>
+
+                        </mat-form-field>
+                    </div>
+                    <div class="col-6">
+                        <ngb-timepicker formControlName="timeStart" [(ngModel)]="timeStart"></ngb-timepicker>
+                    </div>
+              </div>
+
+
+
+              <div class="col-4">
+                    <div class="col-6">
+                        <mat-form-field>
+                            
+                                <input formControlName="dateEnd" matInput [matDatepicker]="pickerEnd" placeholder="Choose end date" required>
+                                <mat-datepicker-toggle matSuffix [for]="pickerEnd"></mat-datepicker-toggle>
+                                <mat-datepicker #pickerEnd></mat-datepicker>
+                            
+                        </mat-form-field>
+                    </div>
+                    <div class="col-6">
+                        <ngb-timepicker formControlName="timeEnd" [(ngModel)]="timeEnd"></ngb-timepicker>
+                    </div>
+              </div>
+
+      
+              <div class="col-6 pl-4">
+                <mat-checkbox (click)="newConcert()">New concert</mat-checkbox>
+              </div>
+      
+              <div class="col-6 offset-5 text-right">
+                <button type="submit" *ngIf="!newConcertVar" [disabled]="concertForm.invalid" class="btn btn-primary">Edit</button>
+                <button type="submit" *ngIf="newConcertVar" [disabled]="concertForm.invalid" class="btn btn-primary">Submit</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </mat-card>
