--- a/src/app/instrument/instrument.component.html
+++ b/src/app/instrument/instrument.component.html
@@ -1,1 +1,62 @@
-<p>instrument works!</p>
+<div class="mat-elevation-z8 mb-5">
+        <table mat-table [dataSource]="dataSource" class="w-100">
+        
+          <!-- Position Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> {{ 'name' | titlecase }} </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          </ng-container>
+        
+          <!-- Name Column -->
+          <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef> {{ 'type' | titlecase }} </th>
+            <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+          </ng-container>
+      
+          <ng-container matColumnDef="options">
+            <th class="text-center" mat-header-cell *matHeaderCellDef> {{'options'| titlecase}} </th>
+            <td class="text-center" mat-cell *matCellDef="let element"> 
+              <button (click)="patchValue(element)" class="btn btn-primary">Edit</button>
+              <button (click)="deleteInstrument(element)" class="btn btn-danger">Delete</button>
+            </td>
+          </ng-container>
+        
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </div>
+      
+      <mat-card [@EnterLeave]='hidden'>
+        <div>
+          <div class="row">
+            <form class="row  w-100" [formGroup]="instrumentForm" (ngSubmit)="onSubmit()">
+      
+              <mat-form-field class="d-none">
+                <input matInput class="invisible" formControlName="_id">
+              </mat-form-field>
+      
+              <div class="col-3 pl-4">
+                <mat-form-field>
+                    <input matInput placeholder="Name" formControlName="name" required>
+                </mat-form-field>
+              </div>
+              <div class="col-3">
+                <mat-form-field>
+                    <input matInput placeholder="Type" formControlName="type" required>
+                </mat-form-field>
+              </div>
+              
+              <div class="col-6 pl-4">
+                <mat-checkbox (click)="newInstrument()">New Instrument</mat-checkbox>
+              </div>
+      
+              <div class="col-6 offset-5 text-right">
+                <button type="submit" *ngIf="!newInstrumentVar" [disabled]="instrumentForm.invalid" class="btn btn-primary">Edit</button>
+                <button type="submit" *ngIf="newInstrumentVar" [disabled]="instrumentForm.invalid" class="btn btn-primary">Submit</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </mat-card>
