--- a/src/app/musician/musician.component.html
+++ b/src/app/musician/musician.component.html
@@ -1,30 +1,91 @@
-
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 w-100">
+<div class="mat-elevation-z8 mb-5">
+    <table mat-table [dataSource]="dataSource" class="w-100">
+    
+      <!-- Position Column -->
+      <ng-container matColumnDef="firstName">
+        <th mat-header-cell *matHeaderCellDef> {{ 'first name' | titlecase }} </th>
+        <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+      </ng-container>
+    
+      <!-- Name Column -->
+      <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef> {{ 'last name' | titlecase }} </th>
+        <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+      </ng-container>
+    
+      <!-- Weight Column -->
+      <ng-container matColumnDef="instrument">
+        <th mat-header-cell *matHeaderCellDef> {{ 'instrument' | titlecase }} </th>
+        <td mat-cell *matCellDef="let element"> {{element.instrument | instrumentStyle}} </td>
+      </ng-container>
+    
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="phone">
+        <th mat-header-cell *matHeaderCellDef> {{ 'phone' | titlecase }} </th>
+        <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+      </ng-container>
   
-    <!-- Position Column -->
-    <ng-container matColumnDef="firstName">
-      <th mat-header-cell *matHeaderCellDef> {{ 'first name' | titlecase }} </th>
-      <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
-    </ng-container>
   
-    <!-- Name Column -->
-    <ng-container matColumnDef="lastName">
-      <th mat-header-cell *matHeaderCellDef> {{ 'last name' | titlecase }} </th>
-      <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
-    </ng-container>
+      <ng-container matColumnDef="options">
+        <th class="text-center" mat-header-cell *matHeaderCellDef> {{'options'| titlecase}} </th>
+        <td class="text-center" mat-cell *matCellDef="let element"> 
+          <button (click)="patchValue(element)" class="btn btn-primary">Edit</button>
+          <button (click)="deleteMusician(element)" class="btn btn-danger">Delete</button>
+        </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   
-    <!-- Weight Column -->
-    <ng-container matColumnDef="instrument">
-      <th mat-header-cell *matHeaderCellDef> {{ 'instrument' | titlecase }} </th>
-      <td mat-cell *matCellDef="let element"> {{element.instrument | instrumentStyle}} </td>
-    </ng-container>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  </div>
   
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="phone">
-      <th mat-header-cell *matHeaderCellDef> {{ 'phone' | titlecase }} </th>
-      <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
-    </ng-container>
+  <mat-card [@EnterLeave]='hidden'>
+    <div>
+      <div class="row">
+        <form class="row  w-100" [formGroup]="musicianForm" (ngSubmit)="onSubmit()">
   
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+          <mat-form-field class="d-none">
+            <input matInput class="invisible" formControlName="_id">
+          </mat-form-field>
+  
+          <div class="col-3 pl-4">
+            <mat-form-field>
+                <input matInput placeholder="First name" formControlName="firstName" required>
+            </mat-form-field>
+          </div>
+          <div class="col-3">
+            <mat-form-field>
+                <input matInput placeholder="Last name" formControlName="lastName" required>
+            </mat-form-field>
+          </div>
+          <div class="col-3">
+            <mat-form-field>
+                <input matInput placeholder="Phone name" formControlName="phone" required>
+            </mat-form-field>
+          </div>
+          <div class="col-3">
+            <mat-form-field>
+              <mat-label>Instrument</mat-label>
+              <mat-select formControlName="instrument"  required>
+                <mat-option *ngFor="let instrument of instruments" [value]="instrument">
+                  {{instrument | instrumentStyle}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+  
+          
+          <div class="col-6 pl-4">
+            <mat-checkbox (click)="newMusician()">New musician</mat-checkbox>
+          </div>
+  
+          <div class="col-6 offset-5 text-right">
+            <button type="submit" *ngIf="!newMusicianVar" [disabled]="musicianForm.invalid" class="btn btn-primary">Edit</button>
+            <button type="submit" *ngIf="newMusicianVar" [disabled]="musicianForm.invalid" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </mat-card>
