--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -22,7 +22,7 @@
             <mat-card class="musicians">
                 <div class="mt-2 text-center">
                     <span class="font-weight-bold custom-span">
-                        Musicians Managment
+                        Concerts Managment
                     </span>
                 </div>
             </mat-card>
