--- a/src/app/instrument/instrument.component.html
+++ b/src/app/instrument/instrument.component.html
@@ -17,7 +17,7 @@
             <th class="text-center" mat-header-cell *matHeaderCellDef> {{'options'| titlecase}} </th>
             <td class="text-center" mat-cell *matCellDef="let element"> 
               <button (click)="patchValue(element)" class="btn btn-primary">Edit</button>
-              <button (click)="deleteInstrument(element)" class="btn btn-danger">Delete</button>
+              <button (click)="deleteInstrument(element)" class="ml-2 btn btn-danger">Delete</button>
             </td>
           </ng-container>
         
