--- a/src/app/musician/musician.component.html
+++ b/src/app/musician/musician.component.html
@@ -30,7 +30,7 @@
         <th class="text-center" mat-header-cell *matHeaderCellDef> {{'options'| titlecase}} </th>
         <td class="text-center" mat-cell *matCellDef="let element"> 
           <button (click)="patchValue(element)" class="btn btn-primary">Edit</button>
-          <button (click)="deleteMusician(element)" class="btn btn-danger">Delete</button>
+          <button (click)="deleteMusician(element)" class=" ml-2 btn btn-danger">Delete</button>
         </td>
       </ng-container>
     
